--- a/package.json
+++ b/package.json
@@ -7,9 +7,25 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "framer-motion": "^12.23.12",
+    "i18next": "^21.10.0",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^3.3.0",
+    "leaflet-measure": "^3.1.0",
+    "leaflet-minimap": "^3.6.0",
+    "leaflet-search": "^4.0.0",
+    "leaflet.fullscreen": "^4.0.0",
+    "lucide-react": "^0.544.0",
+    "react": "^18.3.1",
+    "react-countup": "^6.5.3",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^11.18.6",
+    "react-leaflet": "^4.2.1",
+    "react-parallax": "^3.5.2",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "shpjs": "^6.1.0",
+    "swiper": "^10.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +51,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
